<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/button_blue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/declaration"
            android:fontFamily="@font/pt_sans_bold"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="15dp">

        <TextView
            android:id="@+id/question_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/pontano_sans"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/hint_color"
            android:text="@string/are_you_remarried"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/yes_ques2"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/button_black"
                android:fontFamily="@font/pt_sans_bold"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/no_ques2"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/pt_sans_bold"
                android:text="@string/no"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:cornerRadius="20dp"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp" />

        </LinearLayout>


        <EditText
            android:id="@+id/place"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:fontFamily="@font/pontano_sans"
            android:textColor="@color/black"
            android:layout_marginTop="12dp"
            android:inputType="text"
            android:textColorHint="@color/hint_color"
            android:hint="@string/place"
            android:maxLength="100"
            android:visibility="gone"/>


        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:fontFamily="@font/pontano_sans"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/hint_color"
            android:textColor="@color/black"
            android:hint="@string/date"
            android:drawableEnd="@drawable/joining_date_icon"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

        <Button
            android:id="@+id/submit_dialog"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:fontFamily="@font/pt_sans_bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/button_blue"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="20dp"
            android:visibility="gone"/>

            <Button
                android:id="@+id/cancel_dialog"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/pt_sans_bold"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/button_blue"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="20dp"
                android:visibility="gone"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>