<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/button_blue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/pt_sans_bold"
            android:text="@string/confirmation"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="@font/pontano_sans"
            android:textStyle="bold"
            android:textSize="21sp"
            android:textColor="@color/hint_color"
            android:text="@string/are_you_sure_you_want_to_submit_the_data"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/button_black"
                android:fontFamily="@font/pt_sans_bold"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/pt_sans_bold"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorLink="@color/black"
                android:textSize="16sp"
                app:cornerRadius="20dp"
                app:strokeColor="#000000"
                app:strokeWidth="1dp" />
        </LinearLayout>

    </LinearLayout>



</LinearLayout>