<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginPage">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/upper_circles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="97dp"
        android:layout_height="97dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo_abhi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/custom_edittext"
            app:cardCornerRadius="30dp"
            app:cardElevation="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="24dp">


                <TextView
                    android:id="@+id/loginText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pt_sans_bold"
                    android:text="@string/login_to_your_account"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/toggle_screen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="18dp"
                    android:thumb="@drawable/custom_thumb"
                    android:track="@drawable/custom_track"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <!--Admin UI Elements-->
                <EditText
                    android:id="@+id/mobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/mobile"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/pontano_sans"
                    android:hint="@string/login_id"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:textColorHint="@color/hint_color"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/otp"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/otp"
                    android:drawablePadding="8dp"
                    android:enabled="false"
                    android:fontFamily="@font/pontano_sans"
                    android:hint="@string/otp"
                    android:inputType="number"
                    android:maxLength="4"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:textColorHint="@color/hint_color"
                    android:textSize="16sp" />

                <ProgressBar
                    android:id="@+id/login_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/black"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/generateOtp"
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/button_black"
                    android:fontFamily="@font/pt_sans_bold"
                    android:text="@string/generate_otp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:cornerRadius="20dp" />

                <Button
                    android:id="@+id/validateOtp"
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/button_black"
                    android:fontFamily="@font/pt_sans_bold"
                    android:text="@string/validate_otp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:visibility="gone"
                    app:cornerRadius="20dp" />

                <!--Admin UI Elemrnts-->
                <EditText
                    android:id="@+id/adminId"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/adminid_icon"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/pontano_sans"
                    android:hint="@string/admin_id"
                    android:inputType="text"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:textColorHint="@color/hint_color"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/password_icon"
                    android:drawablePadding="8dp"
                    android:enabled="true"
                    android:fontFamily="@font/pontano_sans"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:textColorHint="@color/hint_color"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <ProgressBar
                    android:id="@+id/loading_pensioner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/black"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/button_black"
                    android:fontFamily="@font/pt_sans_bold"
                    android:text="@string/login_to_your_account"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:visibility="gone"
                    app:cornerRadius="20dp" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/lower_circles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:layout_width="139dp"
        android:layout_height="123dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/man"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>